...
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/login_email"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:hint="Enter Email"
        />

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/login_password"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:hint="Enter Password"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Login"
        android:backgroundTint="@color/blue_a400"
        android:textColorHint="@color/white"
        />
...
